--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p>UI/UX Designer</p>
                     <h1>Hi, I'm <span> Namandeep </span><br> from Hong Kong</h1>
                 </div>
-                <img src="images/me.jpg" class="myImage">
+                <img src="images/Me.jpg" class="myImage">
             </div>
         </div>
     </div>
