--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
             <div class="header-content">
                 <div class="header-text">
-                    <p>UI/UX Designer</p>
+                    <p>A Computer Science Graduate</p>
                     <h1>Hi, I'm <span> Namandeep </span><br> from Hong Kong</h1>
                 </div>
                 <img src="images/Me.JPG" class="myImage">
