--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                     <h3>Event Announcement System</h3>
                     <p>An event announcement website that allows users to subscribe to event notifications via email, 
                         view a list of events, and create new events through a form.</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://naman5911-code.github.io/aws-event-announcement-system/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -100,7 +101,8 @@
                     <h3>Data Pipeline for Processing CSV Files</h3>
                     <p>A serverless data pipeline on AWS for processing CSV files 
                         which automates the ingestion, transformation, and visualization of data.</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://naman5911-code.github.io/aws-data-pipeline/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
