--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                     <h3>Automated AWS Receipt Processing System</h3>
                     <p>An automating receipt processing system using AWS services which 
                         extracts structured data from receipts and stores it efficiently for record-keeping and auditing.</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://naman5911-code.github.io/serverless-receipt-processor/" target="_blank" rel="noopener noreferrer>
+                        <i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
