--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <ul>
                             <li><span>Languages</span><br>Fluent in English, Punjabi, Hindi; Conversational in Cantonese; Elementary in Mandarin</li>
                             <li><span>Soft Skills</span><br>Excellent communication, organization, customer service, and adaptability</li>
-                            <li><span>Technical Skills</span><br>C++, JavaScript, SQL, MySQL, HTML, Python, Oracle, and Blender</li>
+                            <li><span>Technical Skills</span><br>AWS Services, C++, Python, JavaScript, SQL, MySQL, HTML, React Native, Spring Boot, Oracle, and Blender</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
