--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                     <h3>Data Pipeline for Processing CSV Files</h3>
                     <p>A serverless data pipeline on AWS for processing CSV files 
                         which automates the ingestion, transformation, and visualization of data.</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://naman5911-code.github.io/aws-data-pipeline/">
+                        <i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -110,7 +111,8 @@
                     <h3>Automated AWS Receipt Processing System</h3>
                     <p>An automating receipt processing system using AWS services which 
                         extracts structured data from receipts and stores it efficiently for record-keeping and auditing.</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://naman5911-code.github.io/serverless-receipt-processor/">
+                        <i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work" id="travelease-project" style="display: none;">
