--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <h3>Data Pipeline for Processing CSV Files</h3>
                     <p>A serverless data pipeline on AWS for processing CSV files 
                         which automates the ingestion, transformation, and visualization of data.</p>
-                    <a href="https://naman5911-code.github.io/aws-data-pipeline/">
+                    <a href="https://naman5911-code.github.io/aws-data-pipeline/" target="_blank" rel="noopener noreferrer">
                         <i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                     <h3>Automated AWS Receipt Processing System</h3>
                     <p>An automating receipt processing system using AWS services which 
                         extracts structured data from receipts and stores it efficiently for record-keeping and auditing.</p>
-                    <a href="https://naman5911-code.github.io/serverless-receipt-processor/">
+                    <a href="https://naman5911-code.github.io/serverless-receipt-processor/" target="_blank" rel="noopener noreferrer">
                         <i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
